# geant4-cosmics

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
include/: ActionInitialization.h  CosmicGeneratorMessenger.h  DetectorConstruction.h  EventAction.h  MacroVisualization.h  PrimaryGeneratorAction.h  RunAction.h  UIMacros.h
src/: ActionInitialization.cpp  CosmicGeneratorMessenger.cpp  DetectorConstruction.cpp  EventAction.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  UIMacros.cpp
